--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "webpack": "^3.10.0"
-  }
+  },
+  "dependencies": {}
 }
